--- a/index.html
+++ b/index.html
@@ -164,6 +164,13 @@
                     style="width:10vw;height:10vw;">
             </sl-button>
             <div class="contentSectionHeading">GALLERY</div>
+            <div class="cardContainer"
+                style="background-color: rgb(255, 255, 0); position:relative; margin-top:5vw; width: 15vw; height: 15vw;">
+                <sl-card class="card-basic"
+                    style="background-color: blue; width: 100%; height: 100%; display: flex; align-items: center; justify-content: center;">
+                    <img class="cardImage" src="/images/FMN_flower.svg" alt="" style="width:100%; height: 100%;" />
+                </sl-card>
+            </div>
             <div class="contentSectionBG">
                 <svg class="backgroundImage" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 870">
                     <path d="M1920,792.14s-383.26-159.06-995.55,0C250.34,967.33,0,792.14,0,792.14V0H1920Z"
