--- a/index.html
+++ b/index.html
@@ -164,10 +164,51 @@
                     style="width:10vw;height:10vw;">
             </sl-button>
             <div class="contentSectionHeading">GALLERY</div>
-            <div class="cardContainer"
-                style="background-color: rgb(255, 255, 0); position:relative; margin-top:5vw; width: 15vw; height: 15vw;">
+            <div class="cardContainer" style="position:relative; margin-top:5vw; width: 15vw; height: 15vw;">
                 <sl-card class="card-basic"
-                    style="background-color: blue; width: 100%; height: 100%; display: flex; align-items: center; justify-content: center;">
+                    style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center;">
+                    <img class="cardImage" src="/images/FMN_flower.svg" alt="" style="width:100%; height: 100%;" />
+                </sl-card>
+            </div>
+            <div class="cardContainer" style="position:relative; margin-top:5vw; width: 15vw; height: 15vw;">
+                <sl-card class="card-basic"
+                    style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center;">
+                    <img class="cardImage" src="/images/FMN_flower.svg" alt="" style="width:100%; height: 100%;" />
+                </sl-card>
+            </div>
+            <div class="cardContainer" style="position:relative; margin-top:5vw; width: 15vw; height: 15vw;">
+                <sl-card class="card-basic"
+                    style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center;">
+                    <img class="cardImage" src="/images/FMN_flower.svg" alt="" style="width:100%; height: 100%;" />
+                </sl-card>
+            </div>
+            <div class="cardContainer" style="position:relative; margin-top:5vw; width: 15vw; height: 15vw;">
+                <sl-card class="card-basic"
+                    style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center;">
+                    <img class="cardImage" src="/images/FMN_flower.svg" alt="" style="width:100%; height: 100%;" />
+                </sl-card>
+            </div>
+            <div class="cardContainer" style="position:relative; margin-top:5vw; width: 15vw; height: 15vw;">
+                <sl-card class="card-basic"
+                    style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center;">
+                    <img class="cardImage" src="/images/FMN_flower.svg" alt="" style="width:100%; height: 100%;" />
+                </sl-card>
+            </div>
+            <div class="cardContainer" style="position:relative; margin-top:5vw; width: 15vw; height: 15vw;">
+                <sl-card class="card-basic"
+                    style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center;">
+                    <img class="cardImage" src="/images/FMN_flower.svg" alt="" style="width:100%; height: 100%;" />
+                </sl-card>
+            </div>
+            <div class="cardContainer" style="position:relative; margin-top:5vw; width: 15vw; height: 15vw;">
+                <sl-card class="card-basic"
+                    style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center;">
+                    <img class="cardImage" src="/images/FMN_flower.svg" alt="" style="width:100%; height: 100%;" />
+                </sl-card>
+            </div>
+            <div class="cardContainer" style="position:relative; margin-top:5vw; width: 15vw; height: 15vw;">
+                <sl-card class="card-basic"
+                    style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center;">
                     <img class="cardImage" src="/images/FMN_flower.svg" alt="" style="width:100%; height: 100%;" />
                 </sl-card>
             </div>
