--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
             <div class="contentSectionHeading">LIVING WITH DEMENTIA</div>
             <div class="videoContainer">
                 <!-- <sl-responsive-embed aspect-ratio="4:3">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/sXYIxJScSik" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/PxEOWhspwEA" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+                        gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </sl-responsive-embed> -->
             </div>
             <div class="contentSectionBG">
@@ -158,58 +158,51 @@
             </div>
         </div>
         <div class="parallax"></div>
-        <div class="contentSection">
+        <div class="contentSection"
+            style="flex-wrap:wrap; padding:12% 7% 12% 7%; align-items:center; justify-content:center;">
             <sl-button onclick="topFunction()" class="rttFlower">
                 <img class="flower" src="./images/FMN_flower.svg" alt="Forget me not flower"
                     style="width:10vw;height:10vw;">
             </sl-button>
             <div class="contentSectionHeading">GALLERY</div>
-            <div class="cardContainer" style="position:relative; margin-top:5vw; width: 15vw; height: 15vw;">
-                <sl-card class="card-basic"
-                    style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center;">
-                    <img class="cardImage" src="/images/FMN_flower.svg" alt="" style="width:100%; height: 100%;" />
+            <div class="cardContainer col-3 col-xs-6">
+                <sl-card class="card-basic">
+                    <img class="cardImage" src="/images/FMN_flower.svg" alt="" />
                 </sl-card>
             </div>
-            <div class="cardContainer" style="position:relative; margin-top:5vw; width: 15vw; height: 15vw;">
-                <sl-card class="card-basic"
-                    style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center;">
-                    <img class="cardImage" src="/images/FMN_flower.svg" alt="" style="width:100%; height: 100%;" />
+            <div class="cardContainer col-3 col-xs-6">
+                <sl-card class="card-basic">
+                    <img class="cardImage" src="/images/FMN_flower.svg" alt="" />
                 </sl-card>
             </div>
-            <div class="cardContainer" style="position:relative; margin-top:5vw; width: 15vw; height: 15vw;">
-                <sl-card class="card-basic"
-                    style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center;">
-                    <img class="cardImage" src="/images/FMN_flower.svg" alt="" style="width:100%; height: 100%;" />
+            <div class="cardContainer col-3 col-xs-6">
+                <sl-card class="card-basic">
+                    <img class="cardImage" src="/images/FMN_flower.svg" alt="" />
                 </sl-card>
             </div>
-            <div class="cardContainer" style="position:relative; margin-top:5vw; width: 15vw; height: 15vw;">
-                <sl-card class="card-basic"
-                    style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center;">
-                    <img class="cardImage" src="/images/FMN_flower.svg" alt="" style="width:100%; height: 100%;" />
+            <div class="cardContainer col-3 col-xs-6">
+                <sl-card class="card-basic">
+                    <img class="cardImage" src="/images/FMN_flower.svg" alt="" />
                 </sl-card>
             </div>
-            <div class="cardContainer" style="position:relative; margin-top:5vw; width: 15vw; height: 15vw;">
-                <sl-card class="card-basic"
-                    style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center;">
-                    <img class="cardImage" src="/images/FMN_flower.svg" alt="" style="width:100%; height: 100%;" />
+            <div class="cardContainer col-3 col-xs-6">
+                <sl-card class="card-basic">
+                    <img class="cardImage" src="/images/FMN_flower.svg" alt="" />
                 </sl-card>
             </div>
-            <div class="cardContainer" style="position:relative; margin-top:5vw; width: 15vw; height: 15vw;">
-                <sl-card class="card-basic"
-                    style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center;">
-                    <img class="cardImage" src="/images/FMN_flower.svg" alt="" style="width:100%; height: 100%;" />
+            <div class="cardContainer col-3 col-xs-6">
+                <sl-card class="card-basic">
+                    <img class="cardImage" src="/images/FMN_flower.svg" alt="" />
                 </sl-card>
             </div>
-            <div class="cardContainer" style="position:relative; margin-top:5vw; width: 15vw; height: 15vw;">
-                <sl-card class="card-basic"
-                    style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center;">
-                    <img class="cardImage" src="/images/FMN_flower.svg" alt="" style="width:100%; height: 100%;" />
+            <div class="cardContainer col-3 col-xs-6">
+                <sl-card class="card-basic">
+                    <img class="cardImage" src="/images/FMN_flower.svg" alt="" />
                 </sl-card>
             </div>
-            <div class="cardContainer" style="position:relative; margin-top:5vw; width: 15vw; height: 15vw;">
-                <sl-card class="card-basic"
-                    style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center;">
-                    <img class="cardImage" src="/images/FMN_flower.svg" alt="" style="width:100%; height: 100%;" />
+            <div class="cardContainer col-3 col-xs-6">
+                <sl-card class="card-basic">
+                    <img class="cardImage" src="/images/FMN_flower.svg" alt="" />
                 </sl-card>
             </div>
             <div class="contentSectionBG">
