--- a/index.html
+++ b/index.html
@@ -136,6 +136,88 @@
                         gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </sl-responsive-embed> -->
             </div>
+            <div class="footerIconsContainer">
+                <div class="footerIconDiv">
+                    <svg version="1.1" id="social-skill" class="livingSVG" xmlns="http://www.w3.org/2000/svg"
+                        xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="160px" height="108px"
+                        viewBox="0 0 160 108" enable-background="new 0 0 160 108" xml:space="preserve">
+                        <g id="person_a"
+                            style="transform-origin: center bottom 0px; transform: matrix(1, 0, 0, 1, 0, 0);">
+                            <path fill="#00D9B3" d="M36.7,106c-3.9,0-7.9-0.8-11.6-2.4c-7.1-3.1-12.6-8.8-15.4-16C3.8,72.7,11.2,55.9,26,50
+                				c14.9-5.9,31.8,1.5,37.6,16.4c3.5,9,2.4,19.1-3.1,27.1c-0.5,0.7-1.4,0.9-2.1,0.4c-0.7-0.5-0.9-1.4-0.4-2.1
+                				c4.9-7.1,5.9-16.2,2.8-24.3c-5.3-13.4-20.4-19.9-33.8-14.7C13.8,58,7.2,73.2,12.4,86.5c2.5,6.5,7.5,11.6,13.8,14.3
+                				s13.4,2.9,19.9,0.4c1-0.4,2-0.9,3-1.4c0.7-0.4,1.6-0.1,2,0.6c0.4,0.7,0.1,1.6-0.6,2c-1.1,0.6-2.2,1.1-3.3,1.6
+                				C43.8,105.3,40.3,106,36.7,106z"></path>
+                            <path fill="#00D9B3" d="M49.9,102.6c-0.1,0-0.2,0-0.3,0c-7.9-1.8-13.2-9.5-12-17.6c0.1-0.6,0.6-1.1,1.2-1.2
+                				c0.6-0.1,1.2,0.1,1.6,0.6c0.3,0.4,6.9,10.2,18.6,6.8c0.8-0.2,1.6,0.2,1.9,1c0.2,0.8-0.2,1.6-1,1.9c-9.2,2.7-15.8-1.6-19.2-4.9
+                				c0.7,5.1,4.5,9.4,9.7,10.6c0.8,0.2,1.3,1,1.1,1.8C51.2,102.1,50.6,102.6,49.9,102.6z"></path>
+                            <path fill="#00D9B3" d="M48.6,73.4c-0.7,0-1.4-0.3-1.9-0.8S46,71.4,46,70.7c0-0.7,0.3-1.4,0.8-1.9c1-1,2.8-1,3.8,0
+                				c0.5,0.5,0.8,1.2,0.8,1.9c0,0.7-0.3,1.4-0.8,1.9S49.4,73.4,48.6,73.4z"></path>
+                        </g>
+                        <g id="person_b"
+                            style="transform-origin: center bottom 0px; transform: matrix(1, 0, 0, 1, 0, 0);">
+                            <path fill="#00D9B3" d="M101.3,106c-3.6,0-7.2-0.7-10.6-2c-1.1-0.5-2.3-1-3.3-1.6c-0.7-0.4-1-1.3-0.6-2c0.4-0.7,1.3-1,2-0.6
+                				c1,0.5,2,1,3,1.4c6.5,2.5,13.5,2.4,19.9-0.4c6.4-2.8,11.3-7.9,13.8-14.3c5.3-13.4-1.3-28.5-14.7-33.7
+                				c-13.4-5.3-28.5,1.3-33.8,14.7c-3.2,8.1-2.1,17.1,2.8,24.3c0.5,0.7,0.3,1.6-0.4,2.1c-0.7,0.5-1.6,0.3-2.1-0.4
+                				c-5.5-8-6.6-18.1-3.1-27.1C80.2,51.5,97.1,44.1,112,50c14.9,5.9,22.2,22.7,16.4,37.6c-2.8,7.2-8.3,12.9-15.4,16
+                				C109.2,105.2,105.3,106,101.3,106z"></path>
+                            <path fill="#00D9B3" d="M88.1,102.6c-0.7,0-1.3-0.5-1.5-1.2c-0.2-0.8,0.3-1.6,1.1-1.8c5.2-1.2,9-5.5,9.7-10.6
+                				c-3.4,3.3-10,7.6-19.2,4.9c-0.8-0.2-1.2-1.1-1-1.9c0.2-0.8,1.1-1.2,1.9-1c11.7,3.5,18.3-6.3,18.6-6.8c0.3-0.5,1-0.8,1.6-0.6
+                				c0.6,0.1,1.1,0.6,1.2,1.2c1.2,8.1-4.1,15.8-12,17.6C88.3,102.6,88.2,102.6,88.1,102.6z"></path>
+                            <path fill="#00D9B3" d="M89.4,73.4c-0.7,0-1.4-0.3-1.9-0.8c-0.5-0.5-0.8-1.2-0.8-1.9c0-0.7,0.3-1.4,0.8-1.9c1-1,2.8-1,3.8,0
+                				c0.5,0.5,0.8,1.2,0.8,1.9c0,0.7-0.3,1.4-0.8,1.9S90.1,73.4,89.4,73.4z"></path>
+                        </g>
+                    </svg>
+                </div>
+                <div class="footerIconDiv">
+                    <svg version="1.1" id="web-skill" class="livingSVG" xmlns="http://www.w3.org/2000/svg"
+                        xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="160px" height="108px"
+                        viewBox="0 0 160 108" enable-background="new 0 0 160 108" xml:space="preserve">
+                        <g id="mobile" style="transform: matrix(1, 0, 0, 1, 0, 0);">
+                            <path fill="#FFFFFF" d="M49.1,102.4c0,1.2-1,2.1-2.1,2.1H20.6c-1.2,0-2.1-1-2.1-2.1v-56c0-1.2,1-2.1,2.1-2.1h26.3
+					        c1.2,0,2.1,1,2.1,2.1v56H49.1z"></path>
+                            <path fill="#00D9B3" d="M46.9,106H20.6c-2,0-3.6-1.6-3.6-3.6v-56c0-2,1.6-3.6,3.6-3.6h26.3c2,0,3.6,1.6,3.6,3.6v56
+					        C50.6,104.4,48.9,106,46.9,106z M20.6,45.7c-0.3,0-0.6,0.3-0.6,0.6v56c0,0.4,0.3,0.6,0.6,0.6h26.3c0.4,0,0.6-0.3,0.6-0.6v-56
+					        c0-0.4-0.3-0.6-0.6-0.6H20.6z"></path>
+                            <path fill="#00D9B3"
+                                d="M35.9,97.2c0,1.2-1,2.1-2.1,2.1c-1.2,0-2.1-1-2.1-2.1c0-1.2,1-2.1,2.1-2.1C35,95,35.9,96,35.9,97.2">
+                            </path>
+                            <path fill="#00D9B3" d="M35.4,76.5c2.3-0.8,3.9-2.9,3.9-5.4c0-3.2-2.6-5.7-5.7-5.7c-3.2,0-5.7,2.6-5.7,5.7v10.1
+					        c0,0.5,0.4,0.9,0.9,0.9h10.1c0.4,0,0.7-0.2,0.8-0.5c0.1-0.3,0.1-0.7-0.2-1L35.4,76.5z M33.6,67.1c2.2,0,4,1.8,4,4
+					        c0,2.1-1.6,3.8-3.6,4l-4.3-4.3C29.8,68.7,31.5,67.1,33.6,67.1 M29.6,80.3v-7.1l7.1,7.1H29.6z"></path>
+                        </g>
+                        <g id="desktop" style="transform: matrix(1, 0, 0, 1, 0, 0);">
+                            <path fill="#FFFFFF"
+                                d="M128.6,77.6c0,1.7-1.3,3-3,3H46.5c-1.7,0-3-1.3-3-3V21.1c0-1.7,1.3-3,3-3h79.1c1.7,0,3,1.3,3,3V77.6z">
+                            </path>
+                            <path fill="#00D9B3" d="M125.6,82.1H46.5c-2.5,0-4.5-2-4.5-4.5V21.1c0-2.5,2-4.5,4.5-4.5h79.1c2.5,0,4.5,2,4.5,4.5v56.5
+					        C130.1,80.1,128.1,82.1,125.6,82.1z M46.5,19.6c-0.8,0-1.5,0.7-1.5,1.5v56.5c0,0.8,0.7,1.5,1.5,1.5h79.1c0.8,0,1.5-0.7,1.5-1.5
+					        V21.1c0-0.8-0.7-1.5-1.5-1.5H46.5z"></path>
+                            <path fill="#00D9B3" d="M101.8,106c-7.3,0-13.2-5.9-13.2-13.2V80.6c0-0.8,0.7-1.5,1.5-1.5c0.8,0,1.5,0.7,1.5,1.5v12.2
+					        c0,5.6,4.6,10.2,10.2,10.2c0.8,0,1.5,0.7,1.5,1.5S102.7,106,101.8,106z"></path>
+                            <path fill="#00D9B3" d="M70.2,106c-0.8,0-1.5-0.7-1.5-1.5s0.7-1.5,1.5-1.5c5.6,0,10.2-4.6,10.2-10.2V80.6c0-0.8,0.7-1.5,1.5-1.5
+					        c0.8,0,1.5,0.7,1.5,1.5v12.2C83.4,100.1,77.5,106,70.2,106z"></path>
+                            <path fill="#00D9B3" d="M88.6,53.8c3.6-1.2,6.2-4.6,6.2-8.6c0-5-4.1-9-9-9c-4.9,0-9,4.1-9,9v15.9c0,0.8,0.6,1.4,1.4,1.4H94
+					        c0.6,0,1.1-0.3,1.3-0.8s0.1-1.1-0.3-1.5L88.6,53.8z M85.7,38.9c3.5,0,6.3,2.8,6.3,6.3c0,3.3-2.5,6-5.7,6.3l-6.8-6.8
+					        C79.8,41.5,82.5,38.9,85.7,38.9 M79.5,59.7V48.5l11.2,11.2H79.5z"></path>
+                        </g>
+                        <g id="mobile2" opacity="0" style="transform: matrix(1, 0, 0, 1, 0, 0); opacity: 0;">
+                            <path fill="#FFFFFF" d="M49.1,102.4c0,1.2-1,2.1-2.1,2.1H20.6c-1.2,0-2.1-1-2.1-2.1v-56c0-1.2,1-2.1,2.1-2.1h26.3
+					        c1.2,0,2.1,1,2.1,2.1L49.1,102.4L49.1,102.4z"></path>
+                            <path fill="#00D9B3" d="M46.9,106H20.6c-2,0-3.6-1.6-3.6-3.6v-56c0-2,1.6-3.6,3.6-3.6h26.3c2,0,3.6,1.6,3.6,3.6v56
+					        C50.6,104.4,48.9,106,46.9,106z M20.6,45.7c-0.3,0-0.6,0.3-0.6,0.6v56c0,0.4,0.3,0.6,0.6,0.6h26.3c0.4,0,0.6-0.3,0.6-0.6v-56
+					        c0-0.4-0.3-0.6-0.6-0.6H20.6z"></path>
+                            <path fill="#00D9B3"
+                                d="M35.9,97.2c0,1.2-1,2.1-2.1,2.1c-1.2,0-2.1-1-2.1-2.1c0-1.2,1-2.1,2.1-2.1C35,95,35.9,96,35.9,97.2">
+                            </path>
+                            <path fill="#00D9B3" d="M35.4,76.5c2.3-0.8,3.9-2.9,3.9-5.4c0-3.2-2.6-5.7-5.7-5.7c-3.2,0-5.7,2.6-5.7,5.7v10.1
+					        c0,0.5,0.4,0.9,0.9,0.9h10.1c0.4,0,0.7-0.2,0.8-0.5c0.1-0.3,0.1-0.7-0.2-1L35.4,76.5z M33.6,67.1c2.2,0,4,1.8,4,4
+                            c0,2.1-1.6,3.8-3.6,4l-4.3-4.3C29.8,68.7,31.5,67.1,33.6,67.1 M29.6,80.3v-7.1l7.1,7.1H29.6z">
+                            </path>
+                        </g>
+                    </svg>
+                </div>
+            </div>
             <div class="contentSectionBG">
                 <svg class="backgroundImage" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 870">
                     <path d="M1920,792.14s-383.26-159.06-995.55,0C250.34,967.33,0,792.14,0,792.14V0H1920Z"
