--- a/index.html
+++ b/index.html
@@ -42,12 +42,37 @@
         <div class="glide glideStyle">
             <div class="glide__track" data-glide-el="track">
                 <ul class="glide__slides custom_glide_Container">
-                    <li class="glide__slide"><img class="gliderImage"
-                            src="./images/todd-quackenbush-B60t4HvxznY-unsplash.jpg" alt="Forget me not flower"></li>
-                    <li class="glide__slide"><img class="gliderImage"
-                            src="./images/todd-quackenbush-B60t4HvxznY-unsplash.jpg" alt="Forget me not flower"></li>
-                    <li class="glide__slide"><img class="gliderImage"
-                            src="./images/todd-quackenbush-B60t4HvxznY-unsplash.jpg" alt="Forget me not flower"></li>
+                    <li class="glide__slide">
+                        <div class="dementiaFact">Dementia is the leading cause of disability in Australians above the age of 65</div>
+                        <div>
+                            <img class="gliderImage" src="./images/todd-quackenbush-B60t4HvxznY-unsplash.jpg"
+                                alt="Forget me not flower">
+                        </div>
+                    </li>
+                    <li class="glide__slide">
+                        <div class="dementiaFact">It is the second leading cause of death in Australia</div>
+                        <div><img class="gliderImage" src="./images/todd-quackenbush-B60t4HvxznY-unsplash.jpg"
+                                alt="Forget me not flower">
+                        </div>
+                    </li>
+                    <li class="glide__slide">
+                        <div class="dementiaFact">There are 1,800 new cases of dementia diagnosed per week</div>
+                        <div><img class="gliderImage" src="./images/todd-quackenbush-B60t4HvxznY-unsplash.jpg"
+                                alt="Forget me not flower">
+                        </div>
+                    </li>
+                    <li class="glide__slide">
+                        <div class="dementiaFact">There are approximately 1.2 million Australians care for someone with dementia</div>
+                        <div><img class="gliderImage" src="./images/todd-quackenbush-B60t4HvxznY-unsplash.jpg"
+                                alt="Forget me not flower">
+                        </div>
+                    </li>
+                    <li class="glide__slide">
+                        <div class="dementiaFact">Currently there is <strong>NO CURE</strong></div>
+                        <div><img class="gliderImage" src="./images/todd-quackenbush-B60t4HvxznY-unsplash.jpg"
+                                alt="Forget me not flower">
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
