Created content layout

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
             <div class="glide__track" data-glide-el="track">
                 <ul class="glide__slides custom_glide_Container">
                     <li class="glide__slide">
-                        <div class="dementiaFact">Dementia is the leading cause of disability in Australians above the age of 65</div>
+                        <div class="dementiaFact">Dementia is the leading cause of disability in Australians above the
+                            age of 65</div>
                         <div>
                             <img class="gliderImage" src="./images/todd-quackenbush-B60t4HvxznY-unsplash.jpg"
                                 alt="Forget me not flower">
@@ -62,7 +63,8 @@
                         </div>
                     </li>
                     <li class="glide__slide">
-                        <div class="dementiaFact">There are approximately 1.2 million Australians care for someone with dementia</div>
+                        <div class="dementiaFact">There are approximately 1.2 million Australians care for someone with
+                            dementia</div>
                         <div><img class="gliderImage" src="./images/todd-quackenbush-B60t4HvxznY-unsplash.jpg"
                                 alt="Forget me not flower">
                         </div>
@@ -85,6 +87,9 @@
             <div class="contentSectionHeading">WHAT IS DEMENTIA</div>
             <div id="brainContentSectionImageContainer">
                 <img id="brainImage" src="images/Brain.svg" alt="Brain" />
+            </div>
+            <div class="contentContainer">
+                Fact
             </div>
             <div class="contentSectionBG">
                 <svg class="backgroundImage" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 870">
@@ -140,6 +145,9 @@
                     style="width:10vw;height:10vw;">
             </sl-button>
             <div class="contentSectionHeading">DEMENTIA AMONG US</div>
+            <div class="contentContainer">
+                thing
+            </div>
             <div class="contentSectionBG">
                 <svg class="backgroundImage" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 870">
                     <path d="M1920,792.14s-383.26-159.06-995.55,0C250.34,967.33,0,792.14,0,792.14V0H1920Z"
@@ -154,12 +162,14 @@
                     style="width:10vw;height:10vw;">
             </sl-button>
             <div class="contentSectionHeading">LIVING WITH DEMENTIA</div>
-            <div class="videoContainer">
-                <!-- <sl-responsive-embed aspect-ratio="4:3">
+            <div class="contentContainer">
+                <div class="videoContainer">
+                    <!-- <sl-responsive-embed aspect-ratio="4:3">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/PxEOWhspwEA" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
                         gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </sl-responsive-embed> -->
+                </div>
             </div>
             <div class="footerIconsContainer">
                 <div style="max-width: 50%;">
@@ -263,6 +273,9 @@
                     style="width:10vw;height:10vw;">
             </sl-button>
             <div class="contentSectionHeading">REDUCING RISKS</div>
+            <div class="contentContainer">
+                thing
+            </div>
             <div class="contentSectionBG">
                 <svg class="backgroundImage" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 870">
                     <path d="M1920,792.14s-383.26-159.06-995.55,0C250.34,967.33,0,792.14,0,792.14V0H1920Z"
