Made progress with aligning card items

--- a/index.html
+++ b/index.html
@@ -99,16 +99,17 @@
             </div>
         </div>
         <div class="parallax"></div>
+        <!-- COMMON CAUSES OF DEMENTIA SECTION -->
         <div class="contentSection" style="display:flex;height:140vh;">
             <sl-button onclick="topFunction()" class="rttFlower">
                 <img class="flower" src="./images/FMN_flower.svg" alt="Forget me not flower"
                     style="width:10vw;height:10vw;">
             </sl-button>
-            <div class="contentSectionHeading">SIGNS AND SYMPTOMS</div>
-            <div class="card aggressionCard" style="background-color:yellow;">
+            <div class="contentSectionHeading">4 MOST COMMON CAUSES</div>
+            <div class="card dementiaTypeCard">
                 <sl-card class="card-overview" style="background-color:blue;height:100%;">
                     <div class="cardImageContainer" style="background-color:orange;">
-                        <img src="./images/FMN_flower.svg"
+                        <img class="cardImage" src="./images/FMN_flower.svg"
                             alt="A kitten sits patiently between a terracotta pot and decorative grasses.">
                     </div>
                     <div class="contentImageContainer" style="background-color:red;">
@@ -119,16 +120,46 @@
                     </div>
                 </sl-card>
             </div>
-            <div class="card">
-                <sl-card class="card-overview">
-                    <img slot="image"
-                        src="https://images.unsplash.com/photo-1559209172-0ff8f6d49ff7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=80"
-                        alt="A kitten sits patiently between a terracotta pot and decorative grasses.">
-
-                    <strong>Apathy</strong><br />
-                    <br /><small>Click this card to find out more about how
-                        apathy is presented with dementia
-                    </small>
+            <div class="card dementiaTypeCard">
+                <sl-card class="card-overview" style="background-color:blue;height:100%;">
+                    <div class="cardImageContainer" style="background-color:orange;">
+                        <img class="cardImage" src="./images/FMN_flower.svg"
+                            alt="A kitten sits patiently between a terracotta pot and decorative grasses.">
+                    </div>
+                    <div class="contentImageContainer" style="background-color:red;">
+                        <strong>Aggression</strong><br />
+                        <br /><small>Click this card to find out more about how
+                            aggression is presented with dementia
+                        </small>
+                    </div>
+                </sl-card>
+            </div>
+            <div class="card dementiaTypeCard">
+                <sl-card class="card-overview" style="background-color:blue;height:100%;">
+                    <div class="cardImageContainer" style="background-color:orange;">
+                        <img class="cardImage" src="./images/FMN_flower.svg"
+                            alt="A kitten sits patiently between a terracotta pot and decorative grasses.">
+                    </div>
+                    <div class="contentImageContainer" style="background-color:red;">
+                        <strong>Aggression</strong><br />
+                        <br /><small>Click this card to find out more about how
+                            aggression is presented with dementia
+                        </small>
+                    </div>
+                </sl-card>
+            </div>
+            <div class="card dementiaTypeCard">
+                <sl-card class="card-overview" style="background-color:blue;height:100%;">
+                    <div class="cardImageContainer" style="background-color:orange;">
+                        <img class="cardImage" src="./images/FMN_flower.svg"
+                            alt="A kitten sits patiently between a terracotta pot and decorative grasses.">
+                    </div>
+                    <div class="contentImageContainer" style="background-color:red;">
+                        <strong>Aggression</strong><br />
+                        <br /><small>Click this card to find out more about how
+                            aggression is presented with dementia
+                        </small>
+                    </div>
                 </sl-card>
             </div>
             <div class="contentSectionBG">
