Fixed content footer curl display Kind of... There was a small tear (approx. 1px) in the butting of the c ontent and the footer curl. Shifted footer curl up by 1px to hide the tear.

--- a/index.html
+++ b/index.html
@@ -92,9 +92,11 @@
                 Fact
             </div>
             <div class="contentSectionBG">
-                <svg class="backgroundImage" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 870">
-                    <path d="M1920,792.14s-383.26-159.06-995.55,0C250.34,967.33,0,792.14,0,792.14V0H1920Z"
-                        transform="translate(0 0)" fill="#1D80AB" />
+                <svg class="backgroundImage" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100px" height="7.775px"
+                    viewBox="0 -0.001 100 7.775" enable-background="new 0 -0.001 100 7.775" xml:space="preserve">
+                    <path fill="#1D80AB"
+                        d="M0,3.719c0,0,13.039,9.124,48.148,0c31.891-8.285,51.852,0,51.852,0v-3.72H0V3.719z" />
                 </svg>
             </div>
         </div>
@@ -163,9 +165,11 @@
                 </sl-card>
             </div>
             <div class="contentSectionBG">
-                <svg class="backgroundImage" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 870">
-                    <path d="M1920,792.14s-383.26-159.06-995.55,0C250.34,967.33,0,792.14,0,792.14V0H1920Z"
-                        transform="translate(0 0)" fill="#1D80AB" />
+                <svg class="backgroundImage" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100px" height="7.775px"
+                    viewBox="0 -0.001 100 7.775" enable-background="new 0 -0.001 100 7.775" xml:space="preserve">
+                    <path fill="#1D80AB"
+                        d="M0,3.719c0,0,13.039,9.124,48.148,0c31.891-8.285,51.852,0,51.852,0v-3.72H0V3.719z" />
                 </svg>
             </div>
         </div>
@@ -180,9 +184,11 @@
                 thing
             </div>
             <div class="contentSectionBG">
-                <svg class="backgroundImage" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 870">
-                    <path d="M1920,792.14s-383.26-159.06-995.55,0C250.34,967.33,0,792.14,0,792.14V0H1920Z"
-                        transform="translate(0 0)" fill="#1D80AB" />
+                <svg class="backgroundImage" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100px" height="7.775px"
+                    viewBox="0 -0.001 100 7.775" enable-background="new 0 -0.001 100 7.775" xml:space="preserve">
+                    <path fill="#1D80AB"
+                        d="M0,3.719c0,0,13.039,9.124,48.148,0c31.891-8.285,51.852,0,51.852,0v-3.72H0V3.719z" />
                 </svg>
             </div>
         </div>
@@ -291,9 +297,11 @@
                 </div>
             </div>
             <div class="contentSectionBG">
-                <svg class="backgroundImage" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 870">
-                    <path d="M1920,792.14s-383.26-159.06-995.55,0C250.34,967.33,0,792.14,0,792.14V0H1920Z"
-                        transform="translate(0 0)" fill="#1D80AB" />
+                <svg class="backgroundImage" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100px" height="7.775px"
+                    viewBox="0 -0.001 100 7.775" enable-background="new 0 -0.001 100 7.775" xml:space="preserve">
+                    <path fill="#1D80AB"
+                        d="M0,3.719c0,0,13.039,9.124,48.148,0c31.891-8.285,51.852,0,51.852,0v-3.72H0V3.719z" />
                 </svg>
             </div>
         </div>
@@ -308,9 +316,11 @@
                 thing
             </div>
             <div class="contentSectionBG">
-                <svg class="backgroundImage" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 870">
-                    <path d="M1920,792.14s-383.26-159.06-995.55,0C250.34,967.33,0,792.14,0,792.14V0H1920Z"
-                        transform="translate(0 0)" fill="#1D80AB" />
+                <svg class="backgroundImage" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100px" height="7.775px"
+                    viewBox="0 -0.001 100 7.775" enable-background="new 0 -0.001 100 7.775" xml:space="preserve">
+                    <path fill="#1D80AB"
+                        d="M0,3.719c0,0,13.039,9.124,48.148,0c31.891-8.285,51.852,0,51.852,0v-3.72H0V3.719z" />
                 </svg>
             </div>
         </div>
@@ -363,9 +373,11 @@
                 </sl-card>
             </div>
             <div class="contentSectionBG">
-                <svg class="backgroundImage" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 870">
-                    <path d="M1920,792.14s-383.26-159.06-995.55,0C250.34,967.33,0,792.14,0,792.14V0H1920Z"
-                        transform="translate(0 0)" fill="#1D80AB" />
+                <svg class="backgroundImage" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100px" height="7.775px"
+                    viewBox="0 -0.001 100 7.775" enable-background="new 0 -0.001 100 7.775" xml:space="preserve">
+                    <path fill="#1D80AB"
+                        d="M0,3.719c0,0,13.039,9.124,48.148,0c31.891-8.285,51.852,0,51.852,0v-3.72H0V3.719z" />
                 </svg>
             </div>
         </div>
