--- a/index.html
+++ b/index.html
@@ -102,65 +102,82 @@
         </div>
         <div class="parallax"></div>
         <!-- COMMON CAUSES OF DEMENTIA SECTION -->
-        <div class="contentSection" style="display:flex;height:140vh;">
+        <div class="contentSection"
+            style="flex-wrap:wrap; padding:12% 7% 12% 7%; align-items:center; justify-content:center;">
             <sl-button onclick="topFunction()" class="rttFlower">
                 <img class="flower" src="./images/FMN_flower.svg" alt="Forget me not flower"
                     style="width:10vw;height:10vw;">
             </sl-button>
             <div class="contentSectionHeading">4 MOST COMMON CAUSES</div>
-            <div class="card dementiaTypeCard">
-                <sl-card class="card-overview" style="background-color:blue;height:100%;">
-                    <div class="cardImageContainer" style="background-color:orange;">
+            <div class="cardContainer dementiaTypeCard col-3 col-xs-6">
+                <sl-card class="card-overview">
+                    <div class="cardImageContainer">
                         <img class="cardImage" src="./images/FMN_flower.svg"
                             alt="A kitten sits patiently between a terracotta pot and decorative grasses.">
                     </div>
-                    <div class="contentImageContainer" style="background-color:red;">
-                        <strong>Aggression</strong><br />
-                        <br /><small>Click this card to find out more about how
-                            aggression is presented with dementia
-                        </small>
+                    <div class="contentImageContainer">
+                        <div class="centeredText">
+                            <strong>Aggression</strong><br /><br />
+                        </div>
+                        <div class="centeredText">
+                            <small>Click this card to find out more about how
+                                aggression is presented with dementia
+                            </small>
+                        </div>
                     </div>
                 </sl-card>
             </div>
-            <div class="card dementiaTypeCard">
-                <sl-card class="card-overview" style="background-color:blue;height:100%;">
-                    <div class="cardImageContainer" style="background-color:orange;">
+            <div class="cardContainer dementiaTypeCard col-3 col-xs-6">
+                <sl-card class="card-overview">
+                    <div class="cardImageContainer">
                         <img class="cardImage" src="./images/FMN_flower.svg"
                             alt="A kitten sits patiently between a terracotta pot and decorative grasses.">
                     </div>
-                    <div class="contentImageContainer" style="background-color:red;">
-                        <strong>Aggression</strong><br />
-                        <br /><small>Click this card to find out more about how
-                            aggression is presented with dementia
-                        </small>
+                    <div class="contentImageContainer">
+                        <div class="centeredText">
+                            <strong>Aggression</strong><br /><br />
+                        </div>
+                        <div class="centeredText">
+                            <small>Click this card to find out more about how
+                                aggression is presented with dementia
+                            </small>
+                        </div>
                     </div>
                 </sl-card>
             </div>
-            <div class="card dementiaTypeCard">
-                <sl-card class="card-overview" style="background-color:blue;height:100%;">
-                    <div class="cardImageContainer" style="background-color:orange;">
+            <div class="cardContainer dementiaTypeCard col-3 col-xs-6">
+                <sl-card class="card-overview">
+                    <div class="cardImageContainer">
                         <img class="cardImage" src="./images/FMN_flower.svg"
                             alt="A kitten sits patiently between a terracotta pot and decorative grasses.">
                     </div>
-                    <div class="contentImageContainer" style="background-color:red;">
-                        <strong>Aggression</strong><br />
-                        <br /><small>Click this card to find out more about how
-                            aggression is presented with dementia
-                        </small>
+                    <div class="contentImageContainer">
+                        <div class="centeredText">
+                            <strong>Aggression</strong><br /><br />
+                        </div>
+                        <div class="centeredText">
+                            <small>Click this card to find out more about how
+                                aggression is presented with dementia
+                            </small>
+                        </div>
                     </div>
                 </sl-card>
             </div>
-            <div class="card dementiaTypeCard">
-                <sl-card class="card-overview" style="background-color:blue;height:100%;">
-                    <div class="cardImageContainer" style="background-color:orange;">
+            <div class="cardContainer dementiaTypeCard col-3 col-xs-6">
+                <sl-card class="card-overview">
+                    <div class="cardImageContainer">
                         <img class="cardImage" src="./images/FMN_flower.svg"
                             alt="A kitten sits patiently between a terracotta pot and decorative grasses.">
                     </div>
-                    <div class="contentImageContainer" style="background-color:red;">
-                        <strong>Aggression</strong><br />
-                        <br /><small>Click this card to find out more about how
-                            aggression is presented with dementia
-                        </small>
+                    <div class="contentImageContainer">
+                        <div class="centeredText">
+                            <strong>Aggression</strong><br /><br />
+                        </div>
+                        <div class="centeredText">
+                            <small>Click this card to find out more about how
+                                aggression is presented with dementia
+                            </small>
+                        </div>
                     </div>
                 </sl-card>
             </div>
