--- a/index.html
+++ b/index.html
@@ -191,14 +191,37 @@
             </div>
         </div>
         <div class="parallax"></div>
+        <!-- DEMENTIA AMONG US SECTION -->
         <div class="contentSection">
             <sl-button onclick="topFunction()" class="rttFlower">
                 <img class="flower" src="./images/FMN_flower.svg" alt="Forget me not flower"
                     style="width:10vw;height:10vw;">
             </sl-button>
             <div class="contentSectionHeading">DEMENTIA AMONG US</div>
-            <div class="contentContainer">
-                thing
+            <div class="contentContainer" style="display: none;">
+                <div class="prevelanceContainer">
+                    <div class="flowerBulletPointContainer"><img class="flower bulletFlower"
+                            src="./images/FMN_flower.svg" alt="Forget me not flower" /></div>
+                    <div class="prevelanceText">Currently there are 447,115 Australians are currently living with
+                        dementia</div>
+                </div>
+                <div class="prevelanceContainer" style="display: none;">
+                    <div class="flowerBulletPointContainer"><img class="flower bulletFlower"
+                            src="./images/FMN_flower.svg" alt="Forget me not flower" /></div>
+                    <div class="prevelanceText">More than 50% of Australian Aged Care Residents have dementia</div>
+                </div>
+                <div class="prevelanceContainer" style="display: none;">
+                    <div class="flowerBulletPointContainer"><img class="flower bulletFlower"
+                            src="./images/FMN_flower.svg" alt="Forget me not flower" /></div>
+                    <div class="prevelanceText">Without a medical breakthrough, it is estimated that over 1.1 million
+                        Australians will be living with dementia by 2058</div>
+                </div>
+                <div class="">
+                    <div class=""><img class=" "
+                            src="" alt="" /></div>
+                    <div class="">Symptoms of dementia</div>
+                </div>
+                <div></div>
             </div>
             <div class="contentSectionBG">
                 <svg class="backgroundImage" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
