Added more content to dementia among us section

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 Fact
             </div>
             <div class="contentSectionBG">
-                <svg class="backgroundImage" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                <svg class="backgroundImage" version="1.1" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100px" height="7.775px"
                     viewBox="0 -0.001 100 7.775" enable-background="new 0 -0.001 100 7.775" xml:space="preserve">
                     <path fill="#1D80AB"
@@ -182,7 +182,7 @@
                 </sl-card>
             </div>
             <div class="contentSectionBG">
-                <svg class="backgroundImage" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                <svg class="backgroundImage" version="1.1" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100px" height="7.775px"
                     viewBox="0 -0.001 100 7.775" enable-background="new 0 -0.001 100 7.775" xml:space="preserve">
                     <path fill="#1D80AB"
@@ -198,8 +198,8 @@
                     style="width:10vw;height:10vw;">
             </sl-button>
             <div class="contentSectionHeading">DEMENTIA AMONG US</div>
-            <div class="contentContainer" style="display: none;">
-                <div class="prevelanceContainer">
+            <div class="contentContainer">
+                <div class="prevelanceContainer" style="display: none;">
                     <div class="flowerBulletPointContainer"><img class="flower bulletFlower"
                             src="./images/FMN_flower.svg" alt="Forget me not flower" /></div>
                     <div class="prevelanceText">Currently there are 447,115 Australians are currently living with
@@ -216,15 +216,96 @@
                     <div class="prevelanceText">Without a medical breakthrough, it is estimated that over 1.1 million
                         Australians will be living with dementia by 2058</div>
                 </div>
-                <div class="">
-                    <div class=""><img class=" "
-                            src="" alt="" /></div>
-                    <div class="">Symptoms of dementia</div>
+                <div style="position: relative; margin-top: 15vw;">
+                    <div style="display: flex; justify-content: center;">
+                        <div class=""><img class="" src="" alt="" /></div>
+                        <div class="">Symptoms of dementia</div>
+                    </div>
+                    <div style="display: flex;">
+                        <div class="leftContainer" style="width: 50%;">
+                            <div style="margin: 5vw 0 5vw 0; display: flex; align-items: center; margin-right: 2%;">
+                                <img class="flower bulletFlower" src="./images/FMN_flower.svg"
+                                    alt="Forget me not flower" />
+                                <div>PROBLEMS WITH RECENT MEMORY</div>
+                            </div>
+                        </div>
+                        <div class="rightContainer" style="width: 50%;">
+                            <div style="margin: 5vw 0 5vw 0; display: flex; align-items: center; margin-left: 2%;">
+                                <img class="flower bulletFlower" src="./images/FMN_flower.svg"
+                                    alt="Forget me not flower" />
+                                <div>CONFUSED WITH PLACES AND TIME</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div style="display: flex;">
+                        <div class="leftContainer" style="width: 50%;">
+                            <div style="margin: 5vw 0 5vw 0; display: flex; align-items: center; margin-right: 2%;">
+                                <img class="flower bulletFlower" src="./images/FMN_flower.svg"
+                                    alt="Forget me not flower" />
+                                <div>PROBLEMS WITH VISUAL PERCEPTION</div>
+                            </div>
+                        </div>
+                        <div class="rightContainer" style="width: 50%;">
+                            <div style="margin: 5vw 0 5vw 0; display: flex; align-items: center; margin-left: 2%;">
+                                <img class="flower bulletFlower" src="./images/FMN_flower.svg"
+                                    alt="Forget me not flower" />
+                                <div>DIFFICULTIES IN PLANNING AND THINKING</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div style="display: flex;">
+                        <div class="leftContainer" style="width: 50%;">
+                            <div style="margin: 5vw 0 5vw 0; display: flex; align-items: center; margin-right: 2%;">
+                                <img class="flower bulletFlower" src="./images/FMN_flower.svg"
+                                    alt="Forget me not flower" />
+                                <div>CHANGES IN MOOD, BEHAVIOUR AND PERSONALITY</div>
+                            </div>
+                        </div>
+                        <div class="rightContainer" style="width: 50%;">
+                            <div style="margin: 5vw 0 5vw 0; display: flex; align-items: center; margin-left: 2%;">
+                                <img class="flower bulletFlower" src="./images/FMN_flower.svg"
+                                    alt="Forget me not flower" />
+                                <div>DIFFICULTIES IN COMMUNICATION</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div style="display: flex;">
+                        <div class="leftContainer" style="width: 50%;">
+                            <div style="margin: 5vw 0 5vw 0; display: flex; align-items: center; margin-right: 2%;">
+                                <img class="flower bulletFlower" src="./images/FMN_flower.svg"
+                                    alt="Forget me not flower" />
+                                <div>PROBLEMS WITH WALKING AND MOBILITY</div>
+                            </div>
+                        </div>
+                        <div class="rightContainer" style="width: 50%;">
+                            <div style="margin: 5vw 0 5vw 0; display: flex; align-items: center; margin-left: 2%;">
+                                <img class="flower bulletFlower" src="./images/FMN_flower.svg"
+                                    alt="Forget me not flower" />
+                                <div>POOR JUDGEMENT AND IMPAIRED SOCIAL BEHAVIOUR</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div style="display: flex;">
+                        <div class="leftContainer" style="width: 50%;">
+                            <div style="margin: 5vw 0 5vw 0; display: flex; align-items: center; margin-right: 2%;">
+                                <img class="flower bulletFlower" src="./images/FMN_flower.svg"
+                                    alt="Forget me not flower" />
+                                <div>MISPLACING THINGS</div>
+                            </div>
+                        </div>
+                        <div class="rightContainer" style="width: 50%;">
+                            <div style="margin: 5vw 0 5vw 0; display: flex; align-items: center; margin-left: 2%;">
+                                <img class="flower bulletFlower" src="./images/FMN_flower.svg"
+                                    alt="Forget me not flower" />
+                                <div>DIFFICULTIES COMPLETING FAMILIAR TASKS</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div></div>
             </div>
             <div class="contentSectionBG">
-                <svg class="backgroundImage" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                <!-- the svg had id="Layer_1" -->
+                <svg class="backgroundImage" version="1.1" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100px" height="7.775px"
                     viewBox="0 -0.001 100 7.775" enable-background="new 0 -0.001 100 7.775" xml:space="preserve">
                     <path fill="#1D80AB"
@@ -337,7 +418,7 @@
                 </div>
             </div>
             <div class="contentSectionBG">
-                <svg class="backgroundImage" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                <svg class="backgroundImage" version="1.1" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100px" height="7.775px"
                     viewBox="0 -0.001 100 7.775" enable-background="new 0 -0.001 100 7.775" xml:space="preserve">
                     <path fill="#1D80AB"
@@ -356,7 +437,7 @@
                 thing
             </div>
             <div class="contentSectionBG">
-                <svg class="backgroundImage" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                <svg class="backgroundImage" version="1.1" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100px" height="7.775px"
                     viewBox="0 -0.001 100 7.775" enable-background="new 0 -0.001 100 7.775" xml:space="preserve">
                     <path fill="#1D80AB"
@@ -413,7 +494,7 @@
                 </sl-card>
             </div>
             <div class="contentSectionBG">
-                <svg class="backgroundImage" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                <svg class="backgroundImage" version="1.1" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100px" height="7.775px"
                     viewBox="0 -0.001 100 7.775" enable-background="new 0 -0.001 100 7.775" xml:space="preserve">
                     <path fill="#1D80AB"
