Added content to 'What is dementia' section

--- a/index.html
+++ b/index.html
@@ -85,11 +85,112 @@
                     style="width:10vw;height:10vw;">
             </sl-button>
             <div class="contentSectionHeading">WHAT IS DEMENTIA</div>
-            <div id="brainContentSectionImageContainer">
+            <div id="brainContentSectionImageContainer" style="display: none;">
                 <img id="brainImage" src="images/Brain.svg" alt="Brain" />
             </div>
             <div class="contentContainer">
-                Fact
+                <div style="position: relative; margin-top: 15vw;">
+                    <div style="display: flex; justify-content: center;">
+                        <div class=""><img class="" src="" alt="" /></div>
+                        <div class=""></div>
+                    </div>
+                    <div>
+                        <div class="leftContainer">
+                            <div
+                                style="margin: 5vw 0 0 0; display: flex; justify-content: center; align-items: center;">
+                                <img class="flower bulletFlower" src="./images/FMN_flower.svg"
+                                    alt="Forget me not flower" />
+                                <div style="margin-left: 1%;">Dementia is not one specific disease</div>
+                            </div>
+                            <div style="margin-left: 1%;">- it is a collection of symptoms caused by disorders which affect the brain
+                            </div>
+                        </div>
+                        <div class="rightContainer">
+                            <div
+                            style="margin: 5vw 0 0 0; display: flex; justify-content: center; align-items: center;">                                <img class="flower bulletFlower" src="./images/FMN_flower.svg"
+                                    alt="Forget me not flower" />
+                                <div style="margin-left: 1%;">Dementia affects thinking, behaviour and ability to perform everyday tasks</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="leftContainer">
+                            <div
+                                style="margin: 5vw 0 0 0; display: flex; justify-content: center; align-items: center;">
+                                <img class="flower bulletFlower" src="./images/FMN_flower.svg"
+                                    alt="Forget me not flower" />
+                                <div style="margin-left: 1%;">It is not a normal part of aging process</div>
+                            </div>
+                        </div>
+                        <div class="rightContainer">
+                            <div
+                            style="margin: 5vw 0 0 0; display: flex; justify-content: center; align-items: center;">                                <img class="flower bulletFlower" src="./images/FMN_flower.svg"
+                                    alt="Forget me not flower" />
+                                <div style="margin-left: 1%;">Brain function affected enough to interfere with normal social and working life
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="leftContainer">
+                            <div
+                                style="margin: 5vw 0 0 0; display: flex; justify-content: center; align-items: center;">
+                                <img class="flower bulletFlower" src="./images/FMN_flower.svg"
+                                    alt="Forget me not flower" />
+                                <div style="margin-left: 1%;">Loss of cognitive function and functional independence beyond the level expected
+                                    for normal ageing</div>
+                            </div>
+                        </div>
+                        <div class="rightContainer">
+                            <div
+                            style="margin: 5vw 0 0 0; display: flex; justify-content: center; align-items: center;">                                <img class="flower bulletFlower" src="./images/FMN_flower.svg"
+                                    alt="Forget me not flower" />
+                                <div style="margin-left: 1%;">A permanent and progressive disease which affects an individuals’ ability to
+                                    perform every day activities and care for themselves</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="leftContainer">
+                            <div
+                                style="margin: 5vw 0 0 0; display: flex; justify-content: center; align-items: center;">
+                                <img class="flower bulletFlower" src="./images/FMN_flower.svg"
+                                    alt="Forget me not flower" />
+                                <div style="margin-left: 1%;">Impaired cognitive function often accompanied by deterioration in emotional
+                                    control, social behaviour and motivation</div>
+                            </div>
+                        </div>
+                        <div class="rightContainer">
+                            <div
+                            style="margin: 5vw 0 0 0; display: flex; justify-content: center; align-items: center;">                                <img class="flower bulletFlower" src="./images/FMN_flower.svg"
+                                    alt="Forget me not flower" />
+                                <div style="margin-left: 1%;">Appreciable disturbance to higher cortical functions such as:
+                                </div>
+                            </div>
+                            <div style="margin-left: 1%;">complex attention, executive function, learning and memory, language, and
+                                perceptual-motor or social cognition</div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="leftContainer">
+                            <div
+                                style="margin: 5vw 0 0 0; display: flex; justify-content: center; align-items: center;">
+                                <img class="flower bulletFlower" src="./images/FMN_flower.svg"
+                                    alt="Forget me not flower" />
+                                <div style="margin-left: 1%;">As dementia illness progresses, the person may develop behaviours that may seem
+                                    unusual/out of character</div>
+                            </div>
+                        </div>
+                        <div class="rightContainer">
+                            <div
+                            style="margin: 5vw 0 5vw 0; display: flex; justify-content: center; align-items: center;">
+                                <img class="flower bulletFlower" src="./images/FMN_flower.svg"
+                                    alt="Forget me not flower" />
+                                <div style="margin-left: 1%;">There are 120 different causes of dementia</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="contentSectionBG">
                 <svg class="backgroundImage" version="1.1" xmlns="http://www.w3.org/2000/svg"
