Made minor progress with DAU section - need to fix first section animation

--- a/index.html
+++ b/index.html
@@ -91,7 +91,10 @@
             <!-- <div id="brainContentSectionImageContainer" style="display: none;">
                 <img id="brainImage" src="images/Brain.svg" alt="Brain" />
             </div> -->
-            <div class="contentContainer" style="position: relative; height:60%;">
+            <div class="contentContainer" style="position: relative; height:60%; position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);">
                 <!-- <div style="position: relative;"> margin: 10vh 0 10vh 0;
                 <div style="display: flex; justify-content: center;">
                     <div class="">
@@ -99,7 +102,7 @@
                     </div>
                     <div class=""></div>
                 </div> -->
-                <div style="position: relative; display:flex; align-items: center; background-color: orange;">
+                <div style="position: relative; display:flex; align-items: center; background-color: orange; height: 100%;">
                     <div>
                         <div class="leftContainer" style="height:10%;">
                             <div class="dementiaFact" id="fact1"
