--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         <!-- <div class="contentSection" style="height: 100vh; display:block;"> -->
 
         <div class="contentSection"
-            style="flex-wrap:wrap; padding:12% 7% 12% 7%; align-items:center; justify-content:center;">
+            style="flex-wrap:wrap; padding:10% 7%; align-items:center; justify-content:center; min-height: 100vh;">
             <div
                 style="position: absolute; top:0; width: 100%; height: 10vh; display: flex; justify-content: flex-end; align-items: center;">
                 <div class="contentSectionHeading">4 MAIN CAUSES</div>
@@ -339,7 +339,7 @@
         </div>
         <div class="parallax"></div>
         <!-- DEMENTIA AMONG US SECTION -->
-        <div class="contentSection">
+        <div class="contentSection" style="height: 100vh;">
             <div
                 style="position: absolute; top:0; width: 100%; height: 10vh; display: flex; justify-content: flex-end; align-items: center;">
                 <div class="contentSectionHeading">DEMENTIA AMONG US</div>
@@ -367,7 +367,7 @@
                         million
                         Australians will be living with dementia by 2058</div>
                 </div>
-                <div style="position: relative;">
+                <div style="position: relative; height: 100%;">
                     <div style="display: flex; justify-content: center;">
                         <div class="">
                             <!-- <img class="" src="" alt="1" /> -->
@@ -376,14 +376,14 @@
                     </div>
                     <div style="display: flex;">
                         <div class="leftContainer" style="width: 50%;">
-                            <div style="margin: 5vw 0 5vw 0; display: flex; align-items: center; margin-right: 2%;">
+                            <div style="margin: 5% 0 5% 0; display: flex; align-items: center; margin-right: 2%;">
                                 <img class="flower bulletFlower" src="./images/FMN_flower.svg"
                                     alt="Forget me not flower" />
                                 <div>PROBLEMS WITH RECENT MEMORY</div>
                             </div>
                         </div>
                         <div class="rightContainer" style="width: 50%;">
-                            <div style="margin: 5vw 0 5vw 0; display: flex; align-items: center; margin-left: 2%;">
+                            <div style="margin: 5% 0 5% 0; display: flex; align-items: center; margin-left: 2%;">
                                 <img class="flower bulletFlower" src="./images/FMN_flower.svg"
                                     alt="Forget me not flower" />
                                 <div>CONFUSED WITH PLACES AND TIME</div>
@@ -392,14 +392,14 @@
                     </div>
                     <div style="display: flex;">
                         <div class="leftContainer" style="width: 50%;">
-                            <div style="margin: 5vw 0 5vw 0; display: flex; align-items: center; margin-right: 2%;">
+                            <div style="margin: 5% 0 5% 0; display: flex; align-items: center; margin-right: 2%;">
                                 <img class="flower bulletFlower" src="./images/FMN_flower.svg"
                                     alt="Forget me not flower" />
                                 <div>PROBLEMS WITH VISUAL PERCEPTION</div>
                             </div>
                         </div>
                         <div class="rightContainer" style="width: 50%;">
-                            <div style="margin: 5vw 0 5vw 0; display: flex; align-items: center; margin-left: 2%;">
+                            <div style="margin: 5% 0 5% 0; display: flex; align-items: center; margin-left: 2%;">
                                 <img class="flower bulletFlower" src="./images/FMN_flower.svg"
                                     alt="Forget me not flower" />
                                 <div>DIFFICULTIES IN PLANNING AND THINKING</div>
@@ -408,14 +408,14 @@
                     </div>
                     <div style="display: flex;">
                         <div class="leftContainer" style="width: 50%;">
-                            <div style="margin: 5vw 0 5vw 0; display: flex; align-items: center; margin-right: 2%;">
+                            <div style="margin: 5% 0 5% 0; display: flex; align-items: center; margin-right: 2%;">
                                 <img class="flower bulletFlower" src="./images/FMN_flower.svg"
                                     alt="Forget me not flower" />
                                 <div>CHANGES IN MOOD, BEHAVIOUR AND PERSONALITY</div>
                             </div>
                         </div>
                         <div class="rightContainer" style="width: 50%;">
-                            <div style="margin: 5vw 0 5vw 0; display: flex; align-items: center; margin-left: 2%;">
+                            <div style="margin: 5% 0 5% 0; display: flex; align-items: center; margin-left: 2%;">
                                 <img class="flower bulletFlower" src="./images/FMN_flower.svg"
                                     alt="Forget me not flower" />
                                 <div>DIFFICULTIES IN COMMUNICATION</div>
@@ -424,14 +424,14 @@
                     </div>
                     <div style="display: flex;">
                         <div class="leftContainer" style="width: 50%;">
-                            <div style="margin: 5vw 0 5vw 0; display: flex; align-items: center; margin-right: 2%;">
+                            <div style="margin: 5% 0 5% 0; display: flex; align-items: center; margin-right: 2%;">
                                 <img class="flower bulletFlower" src="./images/FMN_flower.svg"
                                     alt="Forget me not flower" />
                                 <div>PROBLEMS WITH WALKING AND MOBILITY</div>
                             </div>
                         </div>
                         <div class="rightContainer" style="width: 50%;">
-                            <div style="margin: 5vw 0 5vw 0; display: flex; align-items: center; margin-left: 2%;">
+                            <div style="margin: 5% 0 5% 0; display: flex; align-items: center; margin-left: 2%;">
                                 <img class="flower bulletFlower" src="./images/FMN_flower.svg"
                                     alt="Forget me not flower" />
                                 <div>POOR JUDGEMENT AND IMPAIRED SOCIAL BEHAVIOUR</div>
@@ -440,14 +440,14 @@
                     </div>
                     <div style="display: flex;">
                         <div class="leftContainer" style="width: 50%;">
-                            <div style="margin: 5vw 0 5vw 0; display: flex; align-items: center; margin-right: 2%;">
+                            <div style="margin: 5% 0 5% 0; display: flex; align-items: center; margin-right: 2%;">
                                 <img class="flower bulletFlower" src="./images/FMN_flower.svg"
                                     alt="Forget me not flower" />
                                 <div>MISPLACING THINGS</div>
                             </div>
                         </div>
                         <div class="rightContainer" style="width: 50%;">
-                            <div style="margin: 5vw 0 5vw 0; display: flex; align-items: center; margin-left: 2%;">
+                            <div style="margin: 5% 0 5% 0; display: flex; align-items: center; margin-left: 2%;">
                                 <img class="flower bulletFlower" src="./images/FMN_flower.svg"
                                     alt="Forget me not flower" />
                                 <div>DIFFICULTIES COMPLETING FAMILIAR TASKS</div>
