Added dialog for the 4 TYPES OD DEMENTIA section

--- a/index.html
+++ b/index.html
@@ -258,6 +258,11 @@
                     <img class="flower" src="./images/FMN_flower.svg" alt="Forget me not flower" />
                 </sl-button>
             </div>
+            <sl-dialog label="Type 1" id="dementiaDialog1" class="dialog-overview" style="color:black;">
+                This type of dementia kinda sucks... I mean, they all do, but this one is particularly shit.
+                Why, you ask? I have no idea. Just because!
+                <sl-button slot="footer" type="primary">Close</sl-button>
+              </sl-dialog>
             <div class="cardContainer dementiaTypeCard col-3 col-xs-6">
                 <sl-card class="card-overview">
                     <div class="cardImageContainer">
@@ -276,6 +281,9 @@
                     </div>
                 </sl-card>
             </div>
+            <sl-dialog label="Type 2" id="dementiaDialog2" class="dialog-overview" style="color:black;">
+                2 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </sl-dialog>
             <div class="cardContainer dementiaTypeCard col-3 col-xs-6">
                 <sl-card class="card-overview">
                     <div class="cardImageContainer">
